# warpengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gameengine.code-workspace  vcpkg.json  warpengine.cpp
include/: ecs.h
src/models/: guitar.mtl
src/shaders/: compile.bat  compile.sh
